# alertmanager

./: .dockerignore  .gitignore  readme.MD  todo.txt
alert_generator/: Dockerfile  pyproject.toml
alert_generator/src/: alert_generator.py  main.py  prompt.py
alert_metrics_calculator/: calcs.txt
alert_metrics_calculator/src/: main.py  requirements.txt
alert_processor/src/: main.py  subscribe.py
alertgenerator/: .dockerignore  README.md  pyproject.toml
alertgenerator/src/: alert_generator.py  base_llm.py  main.py  prompt.py
alertgenerator/terraform/: main.tf  versions.tf
alertprocessor/: README.md  main.py  pyproject.toml
terraform/: main.tf  variables.tf
